Fix alignment of Twitter verified badge

--- a/src/styles/embed_socials.css
+++ b/src/styles/embed_socials.css
@@ -117,8 +117,8 @@ a#twitter__quote_displayname:hover {
 
 #twitter__verified {
     position: relative;
-    top: 2px;
-    left: 4px;
+    top: -2px;
+    left: 3px;
 }
 .twitter__badge {
     display: flex;
